refactor: Use Java 9+ APIs instead of outdated/3rd-party APIs (#2048)