@@ -1,10 +1,11 @@
 package io.appium.java_client.android;
 
-import com.google.common.collect.ImmutableMap;
 import io.appium.java_client.CanRememberExtensionPresence;
 import io.appium.java_client.CommandExecutionHelper;
 import io.appium.java_client.ExecutesMethod;
 import org.openqa.selenium.UnsupportedCommandException;
+
+import java.util.Map;
 
 import static io.appium.java_client.android.AndroidMobileCommandHelper.fingerPrintCommand;
 
@@ -18,7 +19,7 @@ public interface AuthenticatesByFinger extends ExecutesMethod, CanRememberExtens
     default void fingerPrint(int fingerPrintId) {
         final String extName = "mobile: fingerprint";
         try {
-            CommandExecutionHelper.executeScript(assertExtensionExists(extName), extName, ImmutableMap.of(
+            CommandExecutionHelper.executeScript(assertExtensionExists(extName), extName, Map.of(
                     "fingerprintId", fingerPrintId
             ));
         } catch (UnsupportedCommandException e) {
