@@ -1,6 +1,5 @@
 package io.appium.java_client.android;
 
-import com.google.common.collect.ImmutableMap;
 import io.appium.java_client.CanRememberExtensionPresence;
 import io.appium.java_client.CommandExecutionHelper;
 import io.appium.java_client.ExecutesMethod;
@@ -8,10 +7,10 @@ import org.openqa.selenium.UnsupportedCommandException;
 
 import java.util.Map;
 
-import static com.google.common.base.Preconditions.checkNotNull;
 import static io.appium.java_client.android.AndroidMobileCommandHelper.toggleAirplaneCommand;
 import static io.appium.java_client.android.AndroidMobileCommandHelper.toggleDataCommand;
 import static io.appium.java_client.android.AndroidMobileCommandHelper.toggleWifiCommand;
+import static java.util.Objects.requireNonNull;
 
 public interface SupportsNetworkStateManagement extends ExecutesMethod, CanRememberExtensionPresence {
 
@@ -21,10 +20,10 @@ public interface SupportsNetworkStateManagement extends ExecutesMethod, CanRemem
     default void toggleWifi() {
         final String extName = "mobile: setConnectivity";
         try {
-            Map<String, Object> result = checkNotNull(
+            Map<String, Object> result = requireNonNull(
                     CommandExecutionHelper.executeScript(assertExtensionExists(extName), "mobile: getConnectivity")
             );
-            CommandExecutionHelper.executeScript(this, extName, ImmutableMap.of(
+            CommandExecutionHelper.executeScript(this, extName, Map.of(
                     "wifi", !((Boolean) result.get("wifi"))
             ));
         } catch (UnsupportedCommandException e) {
@@ -40,10 +39,10 @@ public interface SupportsNetworkStateManagement extends ExecutesMethod, CanRemem
     default void toggleAirplaneMode() {
         final String extName = "mobile: setConnectivity";
         try {
-            Map<String, Object> result = checkNotNull(
+            Map<String, Object> result = requireNonNull(
                     CommandExecutionHelper.executeScript(assertExtensionExists(extName), "mobile: getConnectivity")
             );
-            CommandExecutionHelper.executeScript(this, extName, ImmutableMap.of(
+            CommandExecutionHelper.executeScript(this, extName, Map.of(
                     "airplaneMode", !((Boolean) result.get("airplaneMode"))
             ));
         } catch (UnsupportedCommandException e) {
@@ -59,10 +58,10 @@ public interface SupportsNetworkStateManagement extends ExecutesMethod, CanRemem
     default void toggleData() {
         final String extName = "mobile: setConnectivity";
         try {
-            Map<String, Object> result = checkNotNull(
+            Map<String, Object> result = requireNonNull(
                     CommandExecutionHelper.executeScript(assertExtensionExists(extName), "mobile: getConnectivity")
             );
-            CommandExecutionHelper.executeScript(this, extName, ImmutableMap.of(
+            CommandExecutionHelper.executeScript(this, extName, Map.of(
                     "data", !((Boolean) result.get("data"))
             ));
         } catch (UnsupportedCommandException e) {
