@@ -1,6 +1,5 @@
 package io.appium.java_client.android;
 
-import com.google.common.collect.ImmutableMap;
 import io.appium.java_client.AppiumBy;
 import io.appium.java_client.MultiTouchAction;
 import io.appium.java_client.TouchAction;
@@ -11,6 +10,7 @@ import org.openqa.selenium.Point;
 import org.openqa.selenium.WebElement;
 
 import java.util.List;
+import java.util.Map;
 
 import static io.appium.java_client.TestUtils.getCenter;
 import static io.appium.java_client.touch.LongPressOptions.longPressOptions;
@@ -26,8 +26,8 @@ public class AndroidTouchTest extends BaseAndroidTest {
 
     @BeforeEach
     public void setUp() {
-        driver.executeScript("mobile: terminateApp", ImmutableMap.of("appId", APP_ID));
-        driver.executeScript("mobile: activateApp", ImmutableMap.of("appId", APP_ID));
+        driver.executeScript("mobile: terminateApp", Map.of("appId", APP_ID));
+        driver.executeScript("mobile: activateApp", Map.of("appId", APP_ID));
     }
 
     @Test public void dragNDropByElementTest() {
