@@ -1,12 +1,12 @@
 package io.appium.java_client.android;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 import java.time.Duration;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.openqa.selenium.By.xpath;
@@ -14,7 +14,7 @@ import static org.openqa.selenium.By.xpath;
 public class OpenNotificationsTest extends BaseAndroidTest {
     @Test
     public void openNotification() {
-        driver.executeScript("mobile: terminateApp", ImmutableMap.of(
+        driver.executeScript("mobile: terminateApp", Map.of(
                 "appId", APP_ID
         ));
         driver.openNotifications();
